Change JWTs to cookies
commit 463c6b749e695c8576a8a40af238addbc2a97a00
Author: Dom Barter <dom.barter@3squared.com>
Date:   Wed Aug 17 12:37:28 2022 +0100

    reset domain

commit c4e70c797f1c5fed491f9a75ed2f9c7b06def452
Author: Dom Barter <dom.barter@3squared.com>
Date:   Wed Aug 17 12:35:36 2022 +0100

    Update

commit 885da47f44f457bfeba47adb63727aa980c2d91f
Author: Dom Barter <dom.barter@3squared.com>
Date:   Wed Aug 17 10:48:47 2022 +0100

    Update

commit 9e61cf7e15e34893afa29ccd7a9856480bcdd03f
Author: Dom Barter <dom.barter@3squared.com>
Date:   Wed Aug 17 09:51:01 2022 +0100

    update

commit 08081db362459c12a4f37eefd11f1be7975d3def
Author: Dom Barter <dom.barter@3squared.com>
Date:   Tue Aug 16 15:53:22 2022 +0100

    Update api client

commit 3fbd039cbbcf1c99919d7192b1c45d4cbc82dc51
Author: Dom Barter <dom.barter@3squared.com>
Date:   Tue Aug 16 15:53:07 2022 +0100

    JWT returned in cookie
