# Solar.DTOs/Outbound/LoginResultDto.cs
@@ -2,15 +2,13 @@
 {
     public class LoginResultDto
     {
-        public LoginResultDto(string email, string accessToken, IEnumerable<string> roles)
+        public LoginResultDto(string email, IEnumerable<string> roles)
         {
             Email = email;
-            AccessToken = accessToken;
             Roles = roles;
         }
 
         public string Email { get; set; }
-        public string AccessToken { get; set; }
         public IEnumerable<string> Roles { get; set; }
     }
 }
